--- a/src/components/rockets/rocketsCard.css
+++ b/src/components/rockets/rocketsCard.css
@@ -25,7 +25,7 @@ button.rocketCard {
   background-color: rgb(82, 191, 228);
   border: none;
   border-radius: 5px;
-  color: #ffffff;
+  color: #fff;
   cursor: pointer;
 }
 
