Fix stylelint errors

--- a/src/components/rockets/rocketsCard.css
+++ b/src/components/rockets/rocketsCard.css
@@ -53,7 +53,7 @@ button.rocketCard {
 }
 
 button.rocketCard.cancelBtn {
-  background-color: #ffffff;
+  background-color: #fff;
   color: gray;
   border: 1px solid gray;
   box-shadow: 1px 1px 1px gray;
