Add styles for badges and buttons

--- a/src/components/mission.css
+++ b/src/components/mission.css
@@ -11,7 +11,7 @@
 
 .table th,
 .table td {
-  border: 1px solid #ccc;
+  border: 1px solid #131212;
 }
 
 .description-colum {
@@ -32,3 +32,58 @@
   justify-content: center;
   align-items: center;
 }
+
+.not-member {
+  border-radius: 5px;
+  border: 1px solid grey;
+  color: white;
+  background-color: grey;
+  padding: 2px;
+}
+
+.btn-join {
+  font-size: 17px;
+  padding: 5px;
+  background-color: #ccc;
+  border-radius: 5px;
+}
+
+.member {
+  border-radius: 5px;
+  color: white;
+  background-color: rgb(13, 158, 216);
+  padding: 2px;
+}
+
+.btn-cancel {
+  font-size: 15px;
+  padding: 5px;
+  border-radius: 5px;
+  border-color: red;
+  color: red;
+}
+
+.row:nth-child(odd) {
+  background-color: #ccc;
+}
+
+.row:nth-child(odd) .btn-cancel {
+  background-color: #ccc;
+}
+
+.row:nth-child(even) {
+  background-color: white;
+}
+
+.row:nth-child(even) .btn-join {
+  background-color: white;
+}
+
+.row:nth-child(odd) .btn-join {
+  background-color: #ccc;
+}
+
+.row:nth-child(even) .btn-cancel {
+  background-color: white;
+}
+
